--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,84 @@
 {
-  "name": "frontend",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT"
+	"name": "next-app-template",
+	"version": "0.0.1",
+	"private": true,
+	"scripts": {
+		"dev": "next dev --turbo",
+		"build": "next build",
+		"start": "next start",
+		"lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix"
+	},
+	"dependencies": {
+		"@adraffy/ens-normalize": "^1.10.1",
+		"@headlessui/react": "^2.1.2",
+		"@nextui-org/button": "2.0.37",
+		"@nextui-org/code": "2.0.32",
+		"@nextui-org/dropdown": "^2.1.29",
+		"@nextui-org/input": "2.2.4",
+		"@nextui-org/kbd": "2.0.33",
+		"@nextui-org/link": "2.0.34",
+		"@nextui-org/listbox": "2.1.25",
+		"@nextui-org/navbar": "2.0.36",
+		"@nextui-org/react": "^2.4.6",
+		"@nextui-org/snippet": "2.0.41",
+		"@nextui-org/switch": "2.0.33",
+		"@nextui-org/system": "2.2.5",
+		"@nextui-org/theme": "2.2.9",
+		"@react-aria/ssr": "3.9.4",
+		"@react-aria/visually-hidden": "3.8.12",
+		"@solana/wallet-adapter-base": "^0.9.23",
+		"@solana/wallet-adapter-react": "^0.15.35",
+		"@solana/wallet-adapter-react-ui": "^0.9.35",
+		"@solana/wallet-adapter-wallets": "^0.19.32",
+		"@solana/web3.js": "^1.95.3",
+		"@tanstack/react-query": "^5.51.15",
+		"@web3-react/walletconnect-connector": "6.2.7",
+		"@web3auth/wallet-connect-v2-adapter": "^8.12.0",
+		"@web3modal/react": "^2.7.1",
+		"@web3modal/wagmi": "^5.0.8",
+		"axios": "^1.7.2",
+		"chart.js": "^4.4.3",
+		"chartjs-plugin-annotation": "^3.0.1",
+		"classnames": "^2.5.1",
+		"clsx": "2.1.1",
+		"ethers": "^6.13.2",
+		"framer-motion": "~11.1.1",
+		"headlessui": "^0.0.0",
+		"intl-messageformat": "^10.5.0",
+		"jotai": "^2.9.1",
+		"next": "14.2.4",
+		"next-themes": "^0.2.1",
+		"prettier": "^3.3.3",
+		"react": "18.3.1",
+		"react-chartjs-2": "^5.2.0",
+		"react-dom": "18.3.1",
+		"react-loading-icons": "^1.1.0",
+		"react-loading-skeleton": "^3.4.0",
+		"react-toastify": "^10.0.5",
+		"react-use": "^17.5.1",
+		"viem": "^2.18.2",
+		"wagmi": "^2.12.1",
+		"web3modal": "^1.9.12"
+	},
+	"devDependencies": {
+		"@types/node": "^22.0.0",
+		"@types/react": "^18.3.3",
+		"@types/react-dom": "18.3.0",
+		"@typescript-eslint/eslint-plugin": "7.2.0",
+		"@typescript-eslint/parser": "7.2.0",
+		"autoprefixer": "10.4.19",
+		"eslint-config-next": "14.2.1",
+		"eslint-config-prettier": "^8.2.0",
+		"eslint-plugin-import": "^2.26.0",
+		"eslint-plugin-jsx-a11y": "^6.4.1",
+		"eslint-plugin-node": "^11.1.0",
+		"eslint-plugin-prettier": "^5.1.3",
+		"eslint-plugin-react": "^7.23.2",
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"eslint-plugin-unused-imports": "^3.2.0",
+		"postcss": "8.4.38",
+		"tailwind-variants": "0.1.20",
+		"tailwindcss": "3.4.3",
+		"typescript": "5.0.4"
+	}
 }
