--- a/oracle-simple/anchor/package.json
+++ b/oracle-simple/anchor/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "dependencies": {
     "@coral-xyz/anchor": "^0.30.1",
+    "@project-serum/anchor": "^0.26.0",
     "@solana/web3.js": "1.91.9"
   },
   "main": "./index.cjs",
