--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
 	"dependencies": {
 		"@adraffy/ens-normalize": "^1.10.1",
 		"@coral-xyz/anchor": "^0.30.1",
+		"@fortawesome/fontawesome-free": "^6.6.0",
 		"@headlessui/react": "^2.1.2",
 		"@nextui-org/button": "2.0.37",
 		"@nextui-org/code": "2.0.32",
@@ -20,7 +21,7 @@
 		"@nextui-org/link": "2.0.34",
 		"@nextui-org/listbox": "2.1.25",
 		"@nextui-org/navbar": "2.0.36",
-		"@nextui-org/react": "^2.4.6",
+		"@nextui-org/react": "^2.4.8",
 		"@nextui-org/snippet": "2.0.41",
 		"@nextui-org/switch": "2.0.33",
 		"@nextui-org/system": "2.2.5",
@@ -45,6 +46,7 @@
 		"clsx": "2.1.1",
 		"ethers": "^6.13.2",
 		"framer-motion": "~11.1.1",
+		"fs": "^0.0.1-security",
 		"headlessui": "^0.0.0",
 		"intl-messageformat": "^10.5.0",
 		"jotai": "^2.9.1",
