--- a/oracle-frontend/package.json
+++ b/oracle-frontend/package.json
@@ -44,7 +44,7 @@
     "overlayscrollbars-react": "^0.5.6",
     "pino-pretty": "^13.0.0",
     "rc-slider": "^11.1.7",
-    "react": "19.0.0",
+    "react": "^19.0.0",
     "react-countdown": "^2.3.6",
     "react-dom": "19.0.0",
     "react-dropzone": "^14.3.5",
@@ -68,7 +68,7 @@
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^22.10.2",
     "@types/overlayscrollbars": "^1.12.5",
-    "@types/react": "^19.0.2",
+    "@types/react": "^19.0.10",
     "@types/react-table": "^7.7.20",
     "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.20",
